# python

PasswordGenerator/: generate_password.py
QrCodeGenerator/: main.py
UserNameGenerator/: generate_username
boredbot/: .gitignore  README.md  pyproject.toml  streamlit_app.py
boredbot/boredbot/: __init__.py  bot.py  cli.py  content.py  intents.py  memory.py
boredbot/boredbot/games/: __init__.py  base.py  guess_number.py
boredbot/tests/: test_bot.py  test_games.py  test_intents.py  test_memory.py
