[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boredbot"
version = "1.0.0"
description = "A small terminal chatbot for fighting boredom."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Santu" }]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
frontend = ["streamlit>=1.36"]

[project.scripts]
boredbot = "boredbot.cli:run"

[tool.setuptools.packages.find]
include = ["boredbot*"]
